@@ -4,7 +4,8 @@ Changelog
 1.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix teaserportlet migration 1001, which did not consistently migrate.
+  [jone]
 
 
 1.4.0 (2015-02-24)
